--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
+    "react-flatpickr": "^3.10.13",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.2",
+    "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
