--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "filepond-plugin-file-validate-type": "^1.2.9",
     "filepond-plugin-image-preview": "^4.6.12",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-filepond": "^7.1.2",
@@ -24,6 +25,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.2",
     "react-switch": "^7.0.0",
+    "video.js": "^8.19.1",
+    "videojs-hotkeys": "^0.2.30",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
