--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-switch": "^7.0.0",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
+    "sweetalert2": "^11.14.5",
     "video.js": "^8.19.1",
     "videojs-hotkeys": "^0.2.30",
     "web-vitals": "^2.1.4",
