--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
     "sweetalert2": "^11.14.5",
+    "uuid": "^11.0.3",
     "video.js": "^8.19.1",
     "videojs-hotkeys": "^0.2.30",
     "web-vitals": "^2.1.4",
